[package]
name = "apple-photos-export"
version = "1.2.0"
edition = "2021"

[dependencies]
log = "0.4"
#simple_logger = { version = "5.1.0", default-features = false, features = ["colors", "stderr"] }
fern = "0.7"
ascii_tree = "0.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
plist = "1.8"
rand = "0.9"
rusqlite = { version = "0.37", features = ["bundled"] }
derive-new = "0.7"
walkdir = "2.5"
soft-canonicalize = "0.5"
