[package]
name = "apple-photos-export"
version = "1.3.0-snapshot"
edition = "2021"

[dependencies]
log = "0.4"
fern = "0.7"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
plist = "1.8"
rand = "0.9"
rusqlite = { version = "0.37", features = ["bundled"] }
derive-new = "0.7"
