[package]
name = "apple-photos-export"
version = "1.4.0-snapshot"
edition = "2021"

[dependencies]
log = "0.4"
fern = "0.7"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
plist = "1.8"
rand = "0.10"
rusqlite = { version = "0.39", features = ["bundled", "fallible_uint"] }
derive-new = "0.7"
